--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#000"
-    android:keepScreenOn="true">
+    android:keepScreenOn="true"
+    android:background="#000">
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/cameraPreview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/capture_button_container">
-    </RelativeLayout>
+    </FrameLayout>
 
     <!-- Flash Toggle -->
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="1dp"
-        android:layout_marginEnd="@dimen/cam_widget_margin_top_sides"
-        android:layout_marginTop="@dimen/cam_widget_margin_top"
+        android:layout_marginStart="@dimen/cam_widget_margin_top_sides"
+        android:layout_marginTop="@dimen/cam_widget_margin_top_sides"
         android:background="@drawable/circle_white"
-        android:id="@+id/flash_container"
-        android:layout_toStartOf="@+id/switch_orientation_container"
-        android:visibility="visible">
+        android:id="@+id/flash_container">
 
         <ImageButton
             android:id="@+id/btnFlashToggle"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@drawable/cam_circle_selector"
             android:padding="@dimen/cam_content_inset_secondary"
             android:scaleType="fitXY"
@@ -39,52 +37,41 @@
 
     </RelativeLayout>
 
-    <!-- Switch Orientation Button -->
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="1dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/cam_widget_margin_right"
-        android:layout_marginEnd="@dimen/cam_widget_margin_right"
-        android:layout_marginTop="@dimen/cam_widget_margin_top"
-        android:id="@+id/switch_orientation_container">
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="1dp"
-            android:background="@drawable/circle_white">
-
-            <ImageButton
-                android:id="@+id/btnSwitchCamera"
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                android:layout_centerInParent="true"
-                android:background="@drawable/cam_grey_circle_selector"
-                android:padding="@dimen/cam_content_inset_secondary"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_switch_camera_orient"
-                tools:ignore="ContentDescription"
-                />
-
-        </RelativeLayout>
-
-    </RelativeLayout>
-
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:padding="@dimen/cam_content_inset_primary"
-        android:background="@drawable/circle_opaque"
         android:id="@+id/capture_button_container">
 
         <RelativeLayout
-            android:id="@+id/stillshot"
+            android:id="@+id/container_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="30dp"
+            android:padding="1dp"
+            android:background="@drawable/circle_white">
+
+            <ImageButton
+                android:id="@+id/btnSetting"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/cam_grey_circle_selector"
+                android:padding="@dimen/cam_content_inset_secondary"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_settings"
+                android:tint="#000"
+                tools:ignore="ContentDescription" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/container_tillshot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="1dp"
@@ -102,6 +89,27 @@
                 android:src="@drawable/cam_action_stillshot"
                 tools:ignore="ContentDescription" />
 
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/container_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="30dp"
+            android:padding="1dp"
+            android:background="@drawable/circle_white">
+
+            <ImageButton
+                android:id="@+id/btnSwitchCamera"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/cam_grey_circle_selector"
+                android:padding="@dimen/cam_content_inset_secondary"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_switch_camera_orient"
+                tools:ignore="ContentDescription" />
 
         </RelativeLayout>
 
