--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -63,4 +63,6 @@
     <color name="body_text">#000000</color>
     <color name="transparent">#000000</color>
     <color name="label_bg">#FFC641</color>
+    <color name="transparent_40">#66000000</color>
+    <color name="transparent_80">#80000000</color>
 </resources>
